# DragonBrain

./: .gitignore  301SLIDES.odp  AckleyObjective.cpp  AckleyObjective.h  BealeObjective.h  BohachevskyObjective.cpp  CMakeLists.txt  CPSO.cpp  CPSO.h  Demo1Draft.tex  DummyFunction.h  FIPS.cpp  FIPS.h  GCPSO.cpp  GCPSO.h  GenOPT.h  GenOTP.h  GoldSteinPriceObjective.cpp  GoldSteinPriceObjective.h  GriewankObjective.cpp  GriewankObjective.h  HillClimber.cpp  HillClimber.h  Interface.cpp  Levy13Objective.h  Manager.cpp  Manager.cpp.orig  Manager.h  Matheu.jpe  OPT Design.tex  OPT_Process.cpp  OPT_Process.h  OTP_Process.h  ObjectiveFunction.h  Optimisater Solving Process.txt  PSO.cpp  PSO.h  Page1.qml  Page2.qml  Page2Form.ui.qml  (+26 more)
ArchitecturalSpecification/: ArchitecturalSpecification.tex
Burndown Chart/: Burndown.xlsx
Documentation/: 301SLIDES.pptx
FunctionalSpecification/: FunctionalSpecification.tex
GUI/: CMakeLists.txt  Interface.cpp  Interface.h  Page1.qml  Page1Form.ui.qml  Page2.qml  Page3.qml  ReadMe.txt  SwarmVisInterface.pro  SwarmVisInterface.pro.user.16a7415  main.qml  qml.qrc
GUI/qml/: Page1.qml  Page2.qml  Page3.qml  Page4.qml  main.qml  qml.qrc
GraphicsProcessor/: CMakeLists.txt  GraphicsProcessor.cpp  GraphicsProcessor.h  main.cpp
GraphicsProcessor/Engine/: BoundingBox.cpp  BoundingBox.h  Camera.h  Cube.cpp  Cube.h  Debug.cpp  Debug.h  Engine.cpp  Engine.h  Errors.cpp  Errors.h  GLSLProgram.cpp  GLSLProgram.h  IOManager.cpp  IOManager.h  Landscape.cpp  Landscape.h  Landscape2D.cpp  Landscape2D.h  Mesh.cpp  Mesh.h  ParticleSystem.cpp  ParticleSystem.h  SkyBox.cpp  SkyBox.h  Sphere.cpp  Sphere.h  Sphere2.cpp  Sphere2.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  Timer.cpp  Timer.h  Window.cpp  Window.h
GraphicsProcessor/GraphicsEngine/: CMakeLists.txt  Camera2D.h  FPSLimiter.cpp  FPSLimiter.h  GLSLProgram.cpp  GLSLProgram.h  GraphicsEngine.cpp  GraphicsEngine.h  IOManager.cpp  IOManager.h  InputManager.cpp  ResourceManager.cpp  TextureCache.cpp  TextureCache.h  Vertex.h  Window.h
GraphicsProcessor/LandscapeEngine/: Landscape.h  Landscape3D.h
GraphicsProcessor/Shaders/: FragmentShader.glsl  VertexShader.glsl  bounding_box.fragment.glsl  bounding_box.vertex.glsl  cube.fragment.glsl  cube.vertex.glsl  graph.v.glsl  landscape2d.fragment.glsl  landscape2d.vertex.glsl  sky_box.fragment.glsl  sky_box.vertex.glsl  sphere.fragment.glsl  sphere.vertex.glsl  text.fragment.glsl  text.vertex.glsl
GraphicsProcessor/Textures/SkyBox/: High.7z
GraphicsProcessor/Textures/SkyBox/sor_cwd/: sor_cwd.shader
GraphicsProcessor/cmake/modules/: FindSOIL.cmake
GraphicsProcessor/test/: CMakeLists.txt  cubeTest.cpp  main.cpp  sphereTest.cpp  textTest.cpp
GraphicsProcessorMK2/: CMakeLists.txt  shader_utils.cpp
GraphicsProcessorMK2/Landscape/: Landscape.cpp  Landscape.h  Landscape3D.cpp
GraphicsProcessorMK2_old/: main.cpp
GraphicsProcessor_old/: CMakeLists.txt  main.cpp
OPT/: CMakeLists.txt
OPT/GenOPT/src/: AckleyObjective.cpp  AckleyObjective.h  AlpineObjective.cpp  AlpineObjective.h  BealeObjective.cpp  BohachevskyObjective.h  CMakeLists.txt  CPSO.cpp  CPSO.h  DummyFunction.cpp  EggHolderObjective.cpp  EggHolderObjective.h  ElitistHillClimber.cpp  ElitistHillClimber.h  FIPS.cpp  FIPS.h  GCPSO.cpp  GCPSO.h  GenOPT.cpp  GenOPT.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  GriewankObjective.cpp  GriewankObjective.h  HillClimber.cpp  HillClimber.cpp.orig  HillClimber.h  Levy13Objective.cpp  Manager.cpp  Manager.h  Michalewicz.cpp  Michalewicz.h  OPT_Process.cpp  OPT_Process.h  ObjectiveFunction.h  PSO.cpp  PSO.h  Particle.cpp  Particle.h  Particle.h.orig  (+44 more)
OPT/src/: CMakeLists.txt  CPSO.cpp  CPSO.h  DummyFunction.h  FIPS.cpp  FIPS.h  GCPSO.h  GenOPT.cpp  GenOPT.h  HillClimber.cpp  HillClimber.h  OPT_Process.h  PSO.h  Particle.h  RandomSearch.cpp  RandomSearch.h  SnapshotManager.cpp  SnapshotManager.h  graphicssettingspackage.h
ObjectiveTest/: AckleyObjective.h  AlpineObjective.h  BealeObjective.h  BohachevskyObjective.h  CMakeLists.txt  EggHolderObjective.h  GoldSteinPriceObjective.h  GriewankObjective.h  Levy13Objective.h  Michalewicz.h  ObjectiveFunction.cpp  ObjectiveFunction.h  PathologicalObjective.h  QuadricObjective.h  QuarticObjective.h  RanaObjective.h  RastriginObjective.h  RosenbrockObjective.h  SaddleObjective.h  SalomonObjective.h  Schwefel22Objective.h  Schwefel26Objective.h  SinObjective.cpp  SinObjective.h  SixHumpCamelBackObjective.h  SkewRastriginObjective.h  SphericalObjective.h  StepObjective.h  WeierstrassObjective.cpp  WeierstrassObjective.h  ZakharovObjective.h  generic.txt  main.cpp
Objectives/: AckleyObjective.cpp  AlpineObjective.cpp  BealeObjective.cpp  BohachevskyObjective.cpp  BohachevskyObjective.h  CMakeLists.txt  EggHolderObjective.cpp  GoldSteinPriceObjective.cpp  GoldSteinPriceObjective.h  Michalewicz.cpp  ObjectiveFunction.h  PathologicalObjective.h  QuarticObjective.cpp  QuarticObjective.h  RastriginObjective.cpp  RosenbrockObjective.h  SaddleObjective.cpp  SalomonObjective.cpp  SalomonObjective.h  Schwefel22Objective.cpp  SixHumpCamelBackObjective.cpp  SkewRastriginObjective.h  SphericalObjective.cpp  generic.txt
SettingsPackage/: CMakeLists.txt  graphicssettingspackage.h  optimizersettingspackage.cpp  optimizersettingspackage.h  problemdomainsettingspackage.cpp  problemdomainsettingspackage.h  settingspackage.cpp  settingspackage.h
SettingsPackage/src/: CMakeLists.txt  graphicssettingspackage.cpp  graphicssettingspackage.h  optimizersettingspackage.cpp  optimizersettingspackage.h  problemdomainsettingspackage.cpp  problemdomainsettingspackage.h  settingspackage.cpp  settingspackage.h
SnapshotManager/: CMakeLists.txt  SnapshotManager.cpp  SnapshotManager.h  snapshot.cpp  snapshot.h
Snapshots/: CMakeLists.txt
Testing/: testing_new.tex
obj_functions/: saddle.html  sin.html  summary.html
optimizers/: cpso.html  elitist_hill_climber.html  fips_pso.html  gcpso.html  gen.html  hill_climber.html  opt.html  pso.html
project/: documentation.html  motivation.html  project_features.html  summary.html
(+172 files in other folders)
